--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 <body>
    <div id="app"></div>
 
-   <script type="text/javascript" src="/main.js"></script>
+   <script type="application/javascript" src="/main.js"></script>
 </body>
 
 </html>
