--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en" data-layout="vertical" data-topbar="light" data-layout-mode="orange" data-sidebar="dark"
    data-layout-width="fluid" data-layout-style="default" data-sidebar-size="lg" data-sidebar-image="none">
 
@@ -9,6 +9,34 @@
    <link rel="shortcut icon" type="image/png" href="/favicon.png?v=3.0" />
 
 
+
+   <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css?v=3.0" rel="stylesheet">
+
+   <title>Promax Multitenant App</title>
+</head>
+
+<body>
+   <div id="app"></div>
+
+   <script type="application/javascript" src="/main.js?v=3.0"></script>
+
+</body>
+
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en" data-layout="vertical" data-topbar="light" data-layout-mode="orange" data-sidebar="dark"
+   data-layout-width="fluid" data-layout-style="default" data-sidebar-size="lg" data-sidebar-image="none">
+
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <link rel="shortcut icon" type="image/png" href="/favicon.png?v=3.0" />
+
+   <meta http-equiv="cache-control" content="no-cache">
+   <meta http-equiv="pragma" content="no-cache">
+   <meta http-equiv="expires" content="0">
 
    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css?v=3.0" rel="stylesheet">
 
